# maccoys-frontend

./: .gitignore  Cargo.toml  Dioxus.toml  Readme.md  build.rs  frontend.config.toml  package.json  rust-toolchain.toml
assets/sass/: _colors.sass  _dataframe.sass  _layout_two_pane.sass  index.sass
public/: index.js  index.js.br
src/: app.rs  configuration.rs  main.rs  routes.rs
src/layouts/: mod.rs  two_panes.rs
src/pages/: mod.rs  ms_run.rs  not_found.rs  search.rs  spectrum.rs  start.rs
